# westerparse

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  MANIFEST.in  README.md  README.rst  ThirdSpeciesFlow.pages  Untitled  WesterParseKivy.py  WesterParseTk.py  WestergaardLineCorpus.py  __init__.py  conf.py  configuration.py  consecutions.py  context.py  corpusTester.;y  csd.py  dependency.py  interface_to_context.py  interface_to_linear_parser.py  interface_to_westerparse.py  keyFinder.py  license.txt  lparser.py  multiTester.py  parser.py  patch_parse_files.py  patch_part_names.py  requirements.txt  rule.py  scratch.py  setup.cfg  setup.py  sonorityChecker.py  stufe.py  tester.py  theoryAnalyzerRS.py  theoryAnalyzerWP.py  utilities.py  (+3 more)
TestScoresXML/: .Test201.mscz,  Bass02.musicxml  Bass04.musicxml  Bass05.musicxml  BlankTest.musicxml  FirstSpecies03.musicxml  FourthSpecies03.musicxml  FourthSpecies21.musicxml  FourthSpeciesTripleMeterTest.musicxml  Generic02.musicxml  HarmonicSecondSpecies01.musicxml  Nursery01.musicxml  Nursery02.musicxml  OutputComparison_MS.musicxml  Primary01.musicxml  Primary02.musicxml  Primary03.musicxml  Primary05.musicxml  Primary20.musicxml  Primary21.musicxml  SecondSpecies01.musicxml  SecondSpecies10.musicxml  SecondSpecies22.musicxml  SyncopationTest.musicxml  Test201.mscz  Test201.musicxml  ThirdSpecies01.musicxml  ThirdSpecies02.musicxml  ThirdSpecies03.musicxml  ThirdSpecies05.musicxml  ThirdSpecies08.musicxml  ThirdSpecies09.musicxml  WTC_I,_Fugue_in_C_Subject.musicxml  WTC_I,_Fugue_in_F_sharp,_Subject.musicxml  (+26 more)
_build/: .buildinfo  (+6 more)
(+464 files in other folders)
