[metadata]

#with open("README.rst", "r") as fh:
#    long_description = fh.read()

#setuptools.setup(

name = 'westerparse-pkg-snarrenberg'
version = '1.0.1-alpha'
license = 'LGPL or BSD'
description = 'An application for evaluating Westergaardian species counterpoint'
long_description = file: README.rst
url = 'https://github.com/snarrenberg/WesterParse'
author = 'Robert Snarrenberg'
author_email = 'snarrenberg@wustl.edu'
classifiers =
    'Programming Language :: Python :: 3'
    'Operating System :: OS Independent'

[options]
packages= find:
package_dir = 
    =src

install_requires = 
    'music21'
dependency_links =
    'https://github.com/cuthbertLab/music21'

[options.packages.find]
where=src