[metadata]
name='westerparse-pkg-snarrenberg',
version='1.0.1-alpha',
license='LGPL or BSD',
license_files = LICENSE.txt
description='An application for evaluating Westergaardian species counterpoint',
long_description=file: README.rst,
url='https://github.com/snarrenberg/westerparse,'
author='Robert Snarrenberg',
author_email='snarrenberg@wustl.edu',
classifiers = ['Programming Language :: Python :: 3',
               'Operating System :: OS Independent']
    
[options]
packages = find:
package_dir = 
    =src
include_package_data = True
install_requires['music21']
dependency_links['https://github.com/cuthbertLab/music21']

[options.packages.find]
where=src